# smartpipe

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  AI_DISCLOSURE.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  MAINTENANCE.md  Makefile  NOTICE  README.md  RELEASING.md  SECURITY.md  SKILL.md  mkdocs.yml  pyproject.toml  pyrightconfig.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  release.yml
demo/video/: .gitignore  README.md  package-lock.json  package.json  teaser.sh  tsconfig.json
docs/: comparison.md  index.md  install.md  privacy.md  quickstart.md  troubleshooting.md
docs/concepts/: feeding-smartpipe.md  granularity.md  models-and-providers.md  output-formats.md  pipes-and-items.md  structured-output.md  the-item.md
docs/cookbook/: README.md  contract-extraction.md  customer-feedback.md  invoice-reconciliation.md  knowledge-graph.md  live-monitoring.md  log-triage.md  meeting-digest.md  ranking-documents.md  research-methods.md  stream-enrichment.md  training-data-prep.md  video-qa.md  visualizing-results.md
docs/demo/: index.html
docs/inputs/: files.md
docs/learn/: 1-first-pipeline.md  2-structured-data.md  3-files-and-media.md  4-free-verbs.md  5-scale-and-cost.md  6-pipelines-that-last.md
docs/reference/: agents.md  cli.md  custom-verbs.md  sem-files.md
docs/verbs/: agree.md  cluster.md  diff.md  distinct.md  embed.md  extend.md  filter.md  getschema.md  graph.md  join.md  map.md  outliers.md  readable.md  reduce.md  sample.md  sort.md  split.md  summarize.md  top-k.md  where.md
overrides/: main.html
packaging/homebrew/: smartpipe.rb
packaging/install/: install.ps1  install.sh
qa/: README.md  make_fixtures.py
qa/fixtures/: README.md  big_report.txt  feedback.txt  invoices.jsonl  logs.jsonl  media.jsonl  orders.jsonl  tickets.jsonl  triage.sem
scripts/: check_doc_links.py  join_eval.py  live_smoke.sh
skills/smartpipe/: cost-and-reliability.md  extraction.md  ingestion.md  output.md  recipes.md
src/sempipe/: __init__.py  __main__.py  container.py
src/smartpipe/: __init__.py  __main__.py  container.py
tests/: __init__.py  conftest.py  test_cli_agree.py  test_cli_auth.py  test_cli_cite.py  test_cli_config.py  test_cli_config_pty.py  test_cli_dates.py  test_cli_demo.py  test_cli_echo.py  test_cli_embed_topk.py  test_cli_extend.py  test_cli_file_inputs.py  test_cli_filter.py  test_cli_graph.py  test_cli_join.py  test_cli_local_only.py  test_cli_manifest.py  test_cli_map.py  test_cli_ocr_wiring.py  test_cli_output_formats.py  test_cli_probe.py  test_cli_progress_pty.py  test_cli_prompt_files.py  test_cli_reader.py  test_cli_reduce.py  test_cli_root.py  test_cli_run.py  test_cli_sample.py  test_cli_schema.py  test_cli_source_accounting.py  test_cli_streaming.py  test_cli_update.py  test_cli_use.py  test_completions.py  test_container.py  test_custom_verbs.py  test_dependency_snapshot.py  test_install_script.py  test_packaging_metadata.py  (+4 more)
tests/cli/: test_confirm.py  test_interrupts.py  test_manifest_option.py  test_rescue.py  test_schema_workshop.py  test_sem_file.py
tests/config/: __init__.py  test_auth_screens.py  test_bundles.py  test_credentials.py  test_display.py  test_doctor.py  test_picker.py  test_picker_screens.py  test_profiles.py  test_state_cache.py  test_store.py  test_verify.py
tests/core/: test_fence.py  test_install_channel.py  test_versions.py
tests/corpus/: README.md
tests/engine/: __init__.py  test_aggregate.py  test_agreement.py  test_blocking.py  test_chunking.py  test_clustering.py  test_coalesce.py  test_fieldpath.py  test_filter_prompt.py  test_graphkg.py  test_graphout.py  test_inline_schema_edges.py  test_join_prompts.py  test_manifest.py  test_map_prompt.py  test_object_lists.py  test_predicate.py  test_preview.py  test_progressbar.py  test_prompts_grammar.py  test_ranking.py  test_render_input.py  test_repair.py  test_runner.py  test_schema.py  test_schema_dsl.py  test_schema_repl.py  test_stratify.py  test_tally.py  test_temporal.py  test_timebin.py  test_units.py  test_windows.py
tests/golden/: cite.bibtex  deps-core.txt  welcome.txt
tests/helpers/: golden.py  paced.py  pdf.py  test_paced.py  wire.py  wiring.py
tests/io/: __init__.py  test_arrow_menu.py  test_as_dial.py  test_binary_stdin.py  test_content_projection.py  test_csv_rows.py  test_diagnostics.py  test_fields.py  test_file_readers.py  test_items.py  test_leaderboard.py  test_manifest.py  test_metering.py  test_ocr_ingest.py  test_preview.py  test_progress.py  test_readers.py  test_richui.py  test_source_accounting.py  test_stream_reader.py  test_table_writer.py  test_text.py  test_tty.py  test_update_check.py  test_usage.py  test_writers.py
tests/models/: __init__.py  test_admission.py  test_anthropic_adapter.py  test_audio_payloads.py  test_base.py  test_budget.py  test_cache.py  test_catalogs.py  test_circuit_broken_failover.py  test_coalesce.py  test_gemini_native.py  test_http_support.py  test_jina.py  test_keycheck.py  test_local_embed.py  test_local_ner.py  test_ocr.py  test_ollama.py  test_openai_codex.py  test_openai_compat.py  test_openai_oauth.py  test_resilience.py  test_resolve.py  test_resolve_fallback.py  test_retry.py  test_stt.py  test_vision_payloads.py  test_windows.py
tests/parsing/: test_detect.py  test_extract.py
tests/verbs/: __init__.py  test_agree.py  test_audio_ladder.py  test_batching.py  test_chart.py  test_cluster.py  test_common.py  test_convert.py  test_diff.py  test_distinct.py  test_embed.py  test_embed_batching.py  test_extend.py  test_filter.py  test_getschema.py  test_graph.py  test_graph_batching.py  test_graph_paid.py  test_join.py  test_map.py  test_media_role.py  test_outliers.py  test_oversize.py  test_readable.py  test_reduce.py  test_reduce_outcomes.py  test_reduce_window.py  test_sample.py  test_sortverb.py  test_split.py  test_split_interrupt.py  test_summarize.py  test_top_k.py  test_top_k_stream.py  test_video_ladder.py  test_where.py  test_whole_set_outcomes.py  (+1 more)
(+369 files in other folders)
