[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sempipe"
version = "0.0.1"
description = "Semantic pipes for your terminal: map, filter, embed, top_k, reduce for Unix pipelines, local-first."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Prabal Gupta", email = "prabal@rjeinc.ca" }]
keywords = ["cli", "llm", "unix", "pipes", "semantic", "grep", "ollama"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Text Processing :: Filters",
  "Topic :: Utilities",
]
dependencies = [
  "click>=8.1",
  "httpx>=0.27",
  "jsonschema>=4.23",
  "tomli-w>=1.0",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]
files = ["markitdown[pdf,docx,pptx,xlsx]>=0.1.6"]
audio = ["markitdown[audio-transcription]>=0.1.6"]
all = ["sempipe[anthropic,files,audio]"]

[project.scripts]
sempipe = "sempipe.cli.root:main"

[project.urls]
Homepage = "https://github.com/prabal-rje/sempipe"
Changelog = "https://github.com/prabal-rje/sempipe/blob/main/CHANGELOG.md"
Issues = "https://github.com/prabal-rje/sempipe/issues"

[dependency-groups]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.24",
  "respx>=0.23",
  "hypothesis>=6.130",
  "coverage[toml]>=7.6",
  "ruff>=0.8",
  "pyright>=1.1.390",
  "pre-commit>=4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/sempipe"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "T20", "SIM", "RUF"]
# T20 bans print(): ALL output must flow through io/writers or io/diagnostics
# so the stdout-is-sacred rule is mechanically enforced.

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src/sempipe"]
branch = true

[tool.coverage.report]
fail_under = 90
show_missing = true
exclude_also = [
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "if sys.platform == .win32.:",
]
