[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "smartpipe"
version = "1.3.0"
description = "Semantic pipes for your terminal - PDFs, images, audio, video, and text through Unix verbs that understand."
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
requires-python = ">=3.11"
authors = [{ name = "Prabal Gupta", email = "prabal@rjeinc.ca" }]
keywords = ["cli", "llm", "unix", "pipes", "semantic", "grep", "ollama"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Text Processing :: Filters",
  "Topic :: Utilities",
]
dependencies = [
  "click>=8.1",
  "httpx>=0.27",
  "jsonschema>=4.23",
  "tomli-w>=1.0",
  # D44/D46 (owner): seamless beats slim — the ENTIRE multimodal surface
  # ships in the box: STT, local embeddings, documents, video, charts, and
  # every provider SDK. No extras, ever. Imports stay function-local so the
  # startup budget holds; models download once on first use.
  # Three components wait on upstream 3.14 wheels (onnxruntime, av) — the
  # markers keep `pip install smartpipe` working on 3.14; runtime detection
  # degrades those paths honestly until the wheels land.
  "faster-whisper>=1.0; python_version < '3.14'",
  "fastembed>=0.4; python_version < '3.14'",
  "markitdown[pdf,docx,pptx,xlsx]>=0.1.6; python_version < '3.14'",
  "anthropic>=0.40",
  "pdfminer.six>=20231228",
  "pypdf>=5.0",
  "imageio-ffmpeg>=0.5",
  "svgwrite>=1.4",
]

[project.optional-dependencies]
# D46: everything ships in core. These empty aliases keep every historical
# "pip install 'smartpipe[…]'" command working instead of erroring.
anthropic = []
files = []
audio = []
video = []
charts = []
all = []

[project.scripts]
smartpipe = "smartpipe.cli.root:main"
sempipe = "smartpipe.cli.root:main"  # compat alias — the old name keeps working

[project.urls]
Homepage = "https://github.com/prabal-rje/smartpipe"
Changelog = "https://github.com/prabal-rje/smartpipe/blob/main/CHANGELOG.md"
Issues = "https://github.com/prabal-rje/smartpipe/issues"

[dependency-groups]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.24",
  "respx>=0.23",
  "hypothesis>=6.130",
  "coverage[toml]>=7.6",
  "ruff>=0.8",
  "pyright>=1.1.390",
  "pre-commit>=4",
]
docs = [
  "mkdocs-material>=9.5",
]

[tool.hatch.build.targets.wheel]
packages = ["src/smartpipe"]

[tool.hatch.build.targets.sdist]
# Ship the package and docs — never the private working documents
# (plan/, CLAUDE.md, TODO.md, idea.md, context/), and no venvs or build junk.
include = [
  "src",
  "docs",
  "README.md",
  "CHANGELOG.md",
  "CONTRIBUTING.md",
  "LICENSE",
  "NOTICE",
  "CITATION.cff",
  "mkdocs.yml",
  "pyproject.toml",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "T20", "SIM", "RUF"]
# T20 bans print(): ALL output must flow through io/writers or io/diagnostics
# so the stdout-is-sacred rule is mechanically enforced.
# A005: `smartpipe.io` deliberately mirrors its responsibility; absolute imports
# mean it can never shadow the stdlib `io` module in practice.
ignore = ["A005"]

[tool.ruff.lint.per-file-ignores]
"qa/**" = ["T201"]  # the fixtures generator reports what it wrote
# The *Fault taxonomy (plan/architecture.md) is deliberate: "UsageError" would
# collide with click.UsageError, which the CLI shell handles right next to ours.
"src/smartpipe/core/errors.py" = ["N818"]
# MissingExtra is a control-flow signal (skip this file), named to read as prose
# in a warning; an "Error" suffix would misrepresent it. Consistent with errors.py.
"src/smartpipe/parsing/extract.py" = ["N818"]
# Dev scripts print by design — they ARE the report (join-eval, future tooling).
"scripts/*" = ["T201"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src/smartpipe"]
branch = true
omit = ["*/__main__.py"]

[tool.coverage.report]
fail_under = 90
show_missing = true
exclude_also = [
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "if sys.platform == .win32.:",
]
